--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=Iv1.e5aafb631d90c609
+github.client.secret=64896e33e3e589f587ca01a38e95c4fee52fa2b1
+github.redirect.uri=http://localhost:8887/callback
