--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8887
 github.client.id=Iv1.e5aafb631d90c609
 github.client.secret=64896e33e3e589f587ca01a38e95c4fee52fa2b1
 github.redirect.uri=http://localhost:8887/callback
+
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
