--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.url=jdbc:h2:~/community
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
+
+#使数据库对应实体类时候下划线能够成功转换成驼峰命名法
+mybatis.configuration.map-underscore-to-camel-case=true
