--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 #使数据库对应实体类时候下划线能够成功转换成驼峰命名法
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=life.xiaonong.community.community.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
