固定图片上传

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ github.client.id=Iv1.e5aafb631d90c609
 github.client.secret=64896e33e3e589f587ca01a38e95c4fee52fa2b1
 github.redirect.uri=http://localhost:8887/callback
 
+#ucloud.ufile.public-key=
+#ucloud.ufile.private-key=
+
 spring.datasource.url=jdbc:h2:~/community
 spring.datasource.username=sa
 spring.datasource.password=123
