实现上传图片，大小小于1MB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,12 @@ github.client.id=Iv1.e5aafb631d90c609
 github.client.secret=64896e33e3e589f587ca01a38e95c4fee52fa2b1
 github.redirect.uri=http://localhost:8887/callback
 
-#ucloud.ufile.public-key=
-#ucloud.ufile.private-key=
+ucloud.ufile.public-key=TOKEN_3cc3a2a2-4f2b-4f0c-a972-1956996ae0b1
+ucloud.ufile.private-key=7d745e02-82c1-4c63-bc34-0551c0907467
+ucloud.ufile.bucket-name=xiaonong
+ucloud.ufile.region=cn-bj
+ucloud.ufile.suffix=ufileos.com
+ucloud.ufile.expires=315360000
 
 spring.datasource.url=jdbc:h2:~/community
 spring.datasource.username=sa
